--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.2",
+    "@vue-flow/core": "^1.45.0",
     "@vueuse/core": "^13.3.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13"
