--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vue-flow/background": "^1.3.2",
     "@vue-flow/controls": "^1.1.2",
     "@vue-flow/core": "^1.45.0",
+    "@vueform/vueform": "^1.12.10",
     "@vueuse/core": "^13.3.0",
     "tailwindcss": "^4.1.10",
     "vue": "^3.5.13"
